--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -20,6 +20,12 @@
 *:-ms-input-placeholder
 	color: inherit
 	opacity: 1
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button 
+    -webkit-appearance: none
+    margin: 0
+
 a, a:hover, a:focus, a:visited
 	color: inherit
 	text-decoration: none
@@ -52,6 +58,29 @@ body
 	position: relative
 	z-index: 4
 	width: 1152px
+
+.navigation
+	opacity: 0
+	width: 0
+	height: 0
+	background-color: #000000
+	color: #ffffff
+	display: flex
+	flex-direction: column
+	position: absolute
+	right: 0
+	bottom: -576px
+	font-size: 24px
+	justify-content: center
+	align-items: center
+	border-bottom-right-radius: 50px
+	transition: height 0.3s, width 0.3s, opacity 0.3s
+	&_active
+		width: 280px
+		height: 576px
+		opacity: 1
+		visibility: visible
+
 
 .logo
 	&__img
