--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,4 +1,31 @@
-$default-font: "roboto-example", sans-serif
+$body-bg: #FFFFFF
+$body-bg: #FFFFFF
+
+$nav-bg: #000000
+$nav-color: #FFFFFF
+
+$slide-color: #FFFFFF
+
+$error-color: #EB5757
+$error-bg: #E6DFDB
+
+$radio-color: #C4C4C4
+$radio-bg: #FFB78F
+
+$btn-bg: #FFFFFF
+
 $border-orange: #FD6E20
+$btn-orange-active-color: #FFFFFF
+$btn-orange-active-bg: #F2AA83
+$input-orange-bg: #FFB78F
+
 $border-brown: #D47C01
+$btn-brown-active-color: #fff
+$btn-brown-active-bg: #EBBD80
+$input-brown-bg: #EBBD80
+
+    
 $border-red: #E93A28
+$btn-red-active-color: #F39B93
+$btn-red-active-bg: #F39B93
+$input-red-bg: #F39B93
