--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -52,7 +52,7 @@ body
 	display: flex
 	justify-content: center
 	align-items: center
-	background-color: #fff
+	background-color: $body-bg
 
 .header
 	position: relative
@@ -63,8 +63,8 @@ body
 	opacity: 0
 	width: 0
 	height: 0
-	background-color: #000000
-	color: #ffffff
+	background-color: $nav-bg
+	color: $nav-color
 	display: flex
 	flex-direction: column
 	position: absolute
@@ -114,7 +114,7 @@ body
 	left: 0
 	z-index: 1
 	display: flex
-	background-color: #fff
+	background-color: $body-bg
 	&:after
 		position: absolute
 		display: block
@@ -130,8 +130,8 @@ body
 		text-align: center
 		border-width: 1px
 		border-style: solid
-		border-bottom-color: #fff	
-		background-color: #fff
+		border-bottom-color: $body-bg
+		background-color: $body-bg
 	&.t3-form_active
 		z-index: 3
 		&:after
@@ -148,7 +148,7 @@ body
 		z-index: 2
 		width: 100%
 		text-align: center
-		color: #fff
+		color: $slide-color
 		font-weight: bold
 		font-size: 32px
 		line-height: normal
@@ -185,7 +185,7 @@ body
 		font-weight: normal
 		line-height: normal
 		font-size: 12px
-		color: #EB5757
+		color: $error-color
 		display: none
 	&__group
 		padding-bottom: 30px
@@ -220,8 +220,8 @@ body
 			padding-top: 5px
 		&_error
 			.t3-form__input
-				border: 2px solid #EB5757
-				background-color: #E6DFDB
+				border: 2px solid $error-color
+				background-color: $error-bg
 			.t3-form__text-error
 				display: block
 			&:before
@@ -252,7 +252,7 @@ body
 		height: 24px
 		width: 24px
 		border-radius: 50%
-		background-color: #C4C4C4
+		background-color: $radio-color
 		position: absolute
 		left: 0
 		top: 0		
@@ -262,7 +262,7 @@ body
 		height: 0
 		width: 0
 		border-radius: 50%
-		background-color: #FFB78F
+		background-color: $radio-bg
 		position: absolute
 		margin: 12px
 		left: 0
@@ -290,7 +290,7 @@ body
 		display: block
 		height: 16px
 		width: 16px
-		background-color: #C4C4C4
+		background-color: $radio-color
 		position: absolute
 		left: 0
 		top: 0
@@ -308,12 +308,13 @@ body
 		margin: 1px
 		left: 0
 		top: 0
+		z-index: 2
 	&__checkbox:checked + &__checkbox-label::after
 		display: block
 	&__checkbox:disabled + &__checkbox-label::before
     	opacity: 0.3
 	&__btn
-		color: #FFFFFF
+		color: $btn-bg
 		font-style: normal
 		font-weight: bold
 		line-height: normal
@@ -348,25 +349,25 @@ body
 		right: 384px
 	&.t3-form_active:after
 		border-color: $border-orange
-		border-bottom-color: #fff
+		border-bottom-color: $body-bg
 	.t3-form
 		&__fields
 			border-color: $border-orange
 		&__input
-			background-color: #FFB78F
+			background-color: $input-orange-bg
 			&.t3-form__input_focus
-				border: 2px solid #FE6E20
+				border: 2px solid $border-orange
 			&.t3-form__input_input
-				background-color: #E6DFDB
+				background-color: $error-bg
 		&__btn
-			background-color: #FF6E20
-			border: 2px solid #FF6E20
+			background-color: $border-orange
+			border: 2px solid $border-orange
 			&:hover
 				background-color: transparent
-				color: #FF6E20
+				color: $border-orange
 			&:active
-				background-color: #F2AA83
-				color: #fff	
+				background-color: $btn-orange-active-bg
+				color: $btn-orange-active-color
 
 .t3-form_brown
 	&:after
@@ -374,25 +375,25 @@ body
 		right: 280px
 	&.t3-form_active:after
 		border-color: $border-brown
-		border-bottom-color: #fff
+		border-bottom-color: $body-bg
 	.t3-form
 		&__fields
 			border-color: $border-brown
 		&__input
-			background-color: #EBBD80
+			background-color: $input-brown-bg
 			&.t3-form__input_focus
 				border: 2px solid $border-brown
 			&.t3-form__input_input
-				background-color: #E6DFDB
+				background-color: $error-bg
 		&__btn
-			background-color: #D77B00
-			border: 2px solid #D77B00
+			background-color: $border-brown
+			border: 2px solid $border-brown
 			&:hover
 				background-color: transparent
-				color: #D77B00
+				color: $border-brown
 			&:active
-				background-color: #EBBD80
-				color: #fff	
+				background-color: $btn-brown-active-bg
+				color: $btn-brown-active-color	
 
 .t3-form_red
 	&:after
@@ -400,22 +401,22 @@ body
 		right: 177px
 	&.t3-form_active:after
 		border-color: $border-red
-		border-bottom-color: #fff
+		border-bottom-color: $body-bg
 	.t3-form
 		&__fields
 			border-color: $border-red
 		&__input
-			background-color: #F39B93
+			background-color: $input-red-bg
 			&.t3-form__input_focus
-				border: 2px solid #E93A29
+				border: 2px solid $border-red
 			&.t3-form__input_input
-				background-color: #E6DFDB
+				background-color: $error-bg
 		&__btn
-			background-color: #E93A29
-			border: 2px solid #E93A29
+			background-color: $border-red
+			border: 2px solid $border-red
 			&:hover
 				background-color: transparent
-				color: #E93A29
+				color: $border-red
 			&:active
-				background-color: #F39B93
-				color: #fff	
+				background-color: $btn-red-active-bg
+				color: $btn-red-active-color
